Fix case in Features page where screenshot 'figures' overflow to download bar

--- a/assets/stylesheets/library.css
+++ b/assets/stylesheets/library.css
@@ -1804,6 +1804,7 @@ fieldset .label-left {
 	padding: 7rem 20%;
 	font-size: 23px; font-size: 2.3rem;
 	text-align: center;
+	clear: both;
 	}
 
 
